# silly-things

./: .gitignore  README.md  requirements.txt  shrq_radio.py
agents/dj/dj/: README.md  pyproject.toml
agents/dj/dj/src/dj/: crew.py  main.py
agents/dj/dj/src/dj/config/: agents.yaml  tasks.yaml
agents/dj/dj/src/dj/tools/: custom_tool.py
agents/dj/dj/tests/: energy_tagger.py  requirements.txt
agents/filecleaner/: README.md  filepaths.json  folder_structure.json  moving_plan.json  pyproject.toml  report.md  report_out.json
agents/filecleaner/src/filecleaner/: crew.py  main.py
agents/filecleaner/src/filecleaner/config/: agents.yaml
agents/filecleaner/src/filecleaner/tools/: custom_tool.py
agents/filecleaner_gpt/: README.md  filepaths.json  folder_structure.json  moving_plan.json  pyproject.toml  report_out.md
agents/filecleaner_gpt/src/filecleaner_gpt/: crew.py  main.py
agents/filecleaner_gpt/src/filecleaner_gpt/config/: agents.yaml  tasks.yaml
agents/gpt_hip_spots/: README.md  pyproject.toml  report.md
agents/gpt_hip_spots/src/gpt_hip_spots/: crew.py  main.py
agents/gpt_hip_spots/src/gpt_hip_spots/config/: agents.yaml
agents/gpt_hip_spots/src/gpt_hip_spots/tools/: custom_tool.py
agents/hip_spots/: README.md  pyproject.toml  report.md
agents/hip_spots/src/hip_spots/: crew.py  main.py
agents/hip_spots/src/hip_spots/config/: agents.yaml  tasks.yaml
agents/hip_spots_web/: README.md  pyproject.toml  report.md
agents/hip_spots_web/src/hip_spots_web/: crew.py  main.py
agents/hip_spots_web/src/hip_spots_web/config/: agents.yaml  tasks.yaml
agents/hip_spots_web/src/hip_spots_web/tools/: custom_tool.py
agents/house_hunter/: README.md  pyproject.toml  report.md
agents/house_hunter/src/house_hunter/: crew.py  main.py
agents/house_hunter/src/house_hunter/config/: agents.yaml  tasks.yaml
agents/music_finder/: README.md  pyproject.toml  report.md
agents/music_finder/src/music_finder/: crew.py  main.py
agents/music_finder/src/music_finder/config/: agents.yaml  tasks.yaml
agents/music_tagger/: README.md  pyproject.toml
agents/music_tagger/.ve/: pyvenv.cfg
agents/music_tagger/src/music_tagger/: crew.py  main.py
agents/music_tagger/src/music_tagger/config/: agents.yaml  tasks.yaml
agents/music_tagger/src/music_tagger/tools/: custom_tool.py
home_improvement_energy_savings/: .gitignore  CPS Electric Jun 24 to Jul 24 2025.csv  Cleaned_Ally_Transactions_v3.numbers  energy model.ipynb  energy_use.csv  gpt_model.ipynb
local_stuff/: dl_yt.py
richter_radio/: requirements.txt  richter_radio.py
richter_radio/Archive/: shrq_radio_mac_no_jingles.py
richter_radio/TTS_tests/: create_bumper_piper.py  piper_test.py
shrq_radio/: README.md  code_energy_loop.py  energy_distr.py  energy_tagger.py  intake_mp3.py  picard_clean.py  requirements.txt  shrq_radio_mac.py  shrq_radio_mac2.py  song_downloader.py  track_energy_analysis.ipynb
shrq_radio/Archive/: shrq_radio_mac_edge_tts.py
shrq_radio/TTS_tests/: OAI_tts.py  create bumper speech.ipynb  create_bumper.py  create_bumper_edgeTTS.py  create_bumper_piper.py
shrq_radio/shrq_radio/: dj_response_map.json
shrq_radio/shrq_radio/dj_agent/shrq_dj/: .gitignore  README.md  build_dataset.py  playlist  process_df.ipynb  pyproject.toml
shrq_radio/shrq_radio/dj_agent/shrq_dj/src/shrq_dj/: crew.py  main.py
shrq_radio/shrq_radio/dj_agent/shrq_dj/src/shrq_dj/config/: agents.yaml  tasks.yaml
shrq_radio/shrq_radio/dj_agent/shrq_dj/src/shrq_dj/tools/: custom_tool.py
shrq_radio/shrq_radio/file_preprocessing/: check_tags.py  code_energy_loop.py  energy_tagger.py  fast_preprocess.py  gen_playlist.py  intake_mp3.py  mp3_rag.py  mp3_rag2.py  picard_clean.py  rag_redo.py  test_rag.py
