[project]
name = "filecleaner_gpt"
version = "0.1.0"
description = "filecleaner_gpt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
filecleaner_gpt = "filecleaner_gpt.main:run"
run_crew = "filecleaner_gpt.main:run"
train = "filecleaner_gpt.main:train"
replay = "filecleaner_gpt.main:replay"
test = "filecleaner_gpt.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
