[project]
name = "hip_spots"
version = "0.1.0"
description = "hip_spots using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
hip_spots = "hip_spots.main:run"
run_crew = "hip_spots.main:run"
train = "hip_spots.main:train"
replay = "hip_spots.main:replay"
test = "hip_spots.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
