[project]
name = "hip_spots_web"
version = "0.1.0"
description = "hip_spots_web using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
hip_spots_web = "hip_spots_web.main:run"
run_crew = "hip_spots_web.main:run"
train = "hip_spots_web.main:train"
replay = "hip_spots_web.main:replay"
test = "hip_spots_web.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
