[project]
name = "music_finder"
version = "0.1.0"
description = "music_finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
music_finder = "music_finder.main:run"
run_crew = "music_finder.main:run"
train = "music_finder.main:train"
replay = "music_finder.main:replay"
test = "music_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
