[project]
name = "shrq_dj"
version = "0.1.0"
description = "shrq_dj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
shrq_dj = "shrq_dj.main:run"
run_crew = "shrq_dj.main:run"
train = "shrq_dj.main:train"
replay = "shrq_dj.main:replay"
test = "shrq_dj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
